--- a/flutter_tutor/pubspec.yaml
+++ b/flutter_tutor/pubspec.yaml
@@ -38,11 +38,47 @@ dependencies:
   cupertino_icons: ^1.0.5
   dartzmq: ^1.0.0-dev.11
   video_player: ^2.4.10
-  better_player:
-  web_socket_channel:
-  file_picker: ^5.2.4
+  better_player: ^0.0.83
+  web_socket_channel: ^2.2.0
 #  open_file: ^3.2.1
   path_provider: ^2.0.11
+  # 系统悬浮通知
+  local_notifier: ^0.1.5
+  # win_toast: ^0.3.0
+  win_toast: ^0.3.0
+  # 系统托盘
+  tray_manager: ^0.2.0
+  system_tray: ^2.0.2
+  # 拖动文件到程序
+  desktop_drop: ^0.4.0
+  # 文件选择
+  file_selector: ^0.9.2+2
+  file_picker: ^5.2.4
+  # 截图
+  screen_capturer: ^0.1.3
+  # 读取剪切板
+  screen_text_extractor: ^0.1.2
+  pasteboard: ^0.2.0
+  clipboard: ^0.1.3
+  # WebView弹窗
+  desktop_webview_window: ^0.1.6
+  # 上下文菜单
+  context_menus: ^1.0.2
+  contextmenu: ^3.0.0
+  #  native_context_menu: ^0.2.1+4  # 该插件在pub.dev中标记为[UNIDENTIFIED]，暂不建议使用
+  desktop_context_menu: ^0.1.1
+  contextual_menu: ^0.1.2
+  # 快捷键
+  hotkey_manager: ^0.1.7
+  # 辅助插件
+  window_manager: ^0.2.8
+  bot_toast: ^4.0.3
+  cross_file: ^0.3.3+2
+  dotted_decoration: ^2.0.0
+  url_launcher: ^6.1.7
+  provider: ^6.0.5
+  flutter_staggered_grid_view: ^0.6.2
+  # preference_list: ^0.0.1
 
 dev_dependencies:
   flutter_test:
