--- a/ex_rust/Cargo.toml
+++ b/ex_rust/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.34.0"
+regex = "1.7.0"
+#tokio = "1.23.0"
+tokio = { version = "1.23.0", features = ["full"] }
+warp = "0.3.3"
